objects/SVMXC__Service__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Service is an activity performed during service delivery. For example, a service provider for modems may list installation, configuration, troubleshooting, onsite repair etc. as various services. Service definition is used in Service contracts to define the coverage for a customer.</description>
    <fields>
        <fullName>Available_Service_External__c</fullName>
        <description>Available Service External</description>
        <externalId>true</externalId>
        <label>Available_Service_External</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>External identifier</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox that indicates if this service is currently active and available for use</description>
        <inlineHelpText>Indicates if this service is currently active and available for use</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Data_Type__c</fullName>
        <description>Type of data to be captured as Commitment when using this service in an SLA Terms record. Options are: Text, Number, Frequency and Boolean</description>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Frequency</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Effective_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Date from which this service is available to your customers.</description>
        <inlineHelpText>Date from which this service is available to your customers.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Qualifying_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qualifying Criteria</label>
        <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
        <relationshipName>Available_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used in ServiceMax screens to manage record selection</description>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Type__c</fullName>
        <description>Indicates the type of service. This helps in grouping similar types of services for reporting purposes.</description>
        <inlineHelpText>Indicates the type of service. This helps in grouping similar types of services for reporting purposes.</inlineHelpText>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Installation</fullName>
                    <default>true</default>
                    <label>Installation</label>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Deinstallation</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Tracked_On__c</fullName>
        <label>Tracked On</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Available Service</label>
    <listViews>
        <fullName>SVMXC__All_Available_Services</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>SVMXC__Service_Type__c</columns>
        <columns>SVMXC__Tracked_On__c</columns>
        <columns>SVMXC__Effective_Date__c</columns>
        <columns>SVMXC__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Available Services</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Available Services</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>